# EDS

./: .gitignore  CHANGELOG.md  CLA_SIGNATORIES.md  CMakeLists.txt  COMMERCIAL_NOTICE.md  CONTRIBUTING.md  INSTALL.md  Kconfig  LICENSE  LICENSE_COMMERCIAL.txt  README.md  SECURITY.md  build_harness.sh  build_tests.sh  ci.yml  harness  misra_analysis.py  sbom.json  west.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  triage_dispatch.yml
boards/frdm_mcxn947/: frdm_mcxn947.conf  frdm_mcxn947.overlay
boards/native_sim/: native_sim.conf  native_sim.overlay  native_sim_doip.conf
boards/nucleo_h743zi/: nucleo_h743zi.conf
cmake/: eds_service_sources.cmake
cmake/toolchain/: arm-none-eabi.cmake
config/: did_database.c  did_database.h  dtc_database.c  dtc_database.h  dtc_mirror.c  dtc_mirror.h  routine_database.c  routine_database.h
core/: uds_access_rights.h  uds_access_table.c  uds_access_table.h  uds_aes_cmac.c  uds_aes_cmac.h  uds_comm_control.c  uds_comm_control.h  uds_safety.c  uds_safety.h  uds_security.c  uds_security.h  uds_security_algo.c  uds_security_algo.h  uds_security_nvm.c  uds_security_nvm.h  uds_server.c  uds_server.h  uds_session.c  uds_session.h  uds_session_stats.c  uds_session_stats.h  uds_transfer_ctx.c  uds_transfer_ctx.h  uds_types.h
core/uds_services/: service_0x10.c  service_0x11.c  service_0x14.c  service_0x19.c  service_0x22.c  service_0x27.c  service_0x28.c  service_0x2E.c  service_0x2F.c  service_0x31.c  service_0x34.c  service_0x36.c  service_0x37.c  service_0x3E.c  service_0x85.c  service_registration.c  services.h
docs/: AI_CONTEXT.md  ARCHITECTURE.md  ARDEP_UPGRADE_GUIDE.md  CODEGEN_ARCHITECTURE.md  COMMERCIAL_ONBOARDING.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  PHASE1_SECURITY_CHANGES.md  README.md  SECURITY_NOTICE.md  Safety_Model.md  TESTING_STRATEGY.md  llms.txt  setup_zephyr_env.sh  threading_guide.md
examples/ardep_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml  prj.conf
examples/basic_ecu/: CMakeLists.txt  prj.conf
examples/basic_ecu_doip/: CMakeLists.txt  README.md  diagnostics_config.yaml  prj.conf
examples/basic_ecu_doip/boards/native_sim/: native_sim_doip.conf
examples/basic_ecu_doip/src/: main.c
examples/basic_ecu_doip_freertos/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/basic_ecu_doip_freertos/boards/qemu_cortex_m4/: FreeRTOSConfig.h
examples/basic_ecu_doip_freertos/boards/qemu_cortex_m4/lwip_stub/lwip/: errno.h  netdb.h  sockets.h
examples/basic_ecu_doip_freertos/src/: main.c
examples/basic_ecu_freertos/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/basic_ecu_freertos/src/: main.c
examples/bms_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/motor_controller_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml  prj.conf
examples/robot_joint_controller_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/robot_joint_controller_ecu/boards/native_sim/: native_sim.conf  native_sim.overlay
examples/robot_joint_controller_ecu/src/: main.c
examples/safeboot_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/safeboot_ecu/boards/nucleo_h743zi/: nucleo_h743zi.conf  nucleo_h743zi.overlay
examples/safeboot_ecu/src/: main.c
examples/safeboot_freertos_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/safeboot_freertos_ecu/boards/nucleo_h743zi/: FreeRTOSConfig.h  linker.ld
examples/safeboot_freertos_ecu/campaigns/: safeboot_freertos_dfu.yaml
examples/safeboot_freertos_ecu/src/: main.c
examples/sensor_ecu/: CMakeLists.txt  README.md  diagnostics_config.yaml  prj.conf
examples/sensor_ecu/boards/native_sim/: native_sim.conf  native_sim.overlay
examples/sensor_ecu/src/: main.c  sensor_monitor.c
examples/sensor_ecu_freertos/: CMakeLists.txt  README.md  diagnostics_config.yaml
examples/sensor_ecu_freertos/boards/qemu_cortex_m4/: linker.ld
examples/sensor_ecu_freertos/src/: did_handlers_impl.c  main.c  sensor_ecu.h  sensor_monitor_freertos.c
extras/wireshark/: README.md  eds.lua
platform/: platform_api.h  uds_flash_ops.c  uds_flash_ops.h
platform/freertos/: freertos_can.c  freertos_can.h  freertos_flash_ops.c  freertos_flash_ops.h  freertos_nvm.c  freertos_platform_api.c  platform_doip.c  platform_doip.h
platform/zephyr/: harness_flash_mock.c  harness_flash_mock.h  nvm_store.c  nvm_store.h  nvm_store_mock.c  platform_doip.c  platform_doip.h  zephyr_can.c  zephyr_can.h  zephyr_flash_ops.c  zephyr_flash_ops.h  zephyr_mutex.c  zephyr_mutex.h  zephyr_platform_api.c  zephyr_port.c  zephyr_port.h  zephyr_timer.c  zephyr_timer.h  zephyr_wdt.c  zephyr_wdt.h
project/mocks/: mock_can_driver.c  mock_can_driver.h  mock_timer.c  (+1 more)
scripts/: verify_did_counts.py
tests/: CMakeLists.txt  test_doip_integration.py  test_license_expiry.py
tests/mocks/: zephyr_port_mock.c
tests/runner/: test_main.c  ztest_shim.h
tests/runner/zephyr/: ztest.h
tests/unit_runnable/: test_can_transport.c  test_did_database.c  test_did_handlers.c  test_did_safety_wrappers.c  test_doip_server.c  test_dtc_database.c  test_dtc_mirror.c  test_isotp.c  test_isotp_concurrent.c  test_phase2_isotp_stmin.c  test_phase2_session_matrix.c  test_phase2_suppress_bit.c  test_phase3_nvm_dtc.c  test_phase3_nvm_integration.c  test_phase3_nvm_security.c  test_phase5_access_table.c  test_phase5_replay_protection.c  test_phase5_security_algo.c  test_phase5_server_access.c  test_routine_database.c  test_service_0x10.c  test_service_0x11.c  test_service_0x14.c  test_service_0x19.c  test_service_0x22.c  test_service_0x27.c  test_service_0x28.c  test_service_0x2F.c  test_service_0x31.c  test_service_0x34.c  test_service_0x36.c  test_service_0x37.c  test_service_0x3E.c  test_service_0x85.c  test_uds_safety.c  test_uds_security.c  test_uds_server.c  test_uds_session.c
tools/: _license.py  activate.py  codegen.py  config_parser.py  requirements.txt  sim_tester.py  sim_tester_sensor.py  templates  testgen.py
transport/: can_transport.c  can_transport.h  isotp.c  isotp.h
zephyr/: module.yml
(+17 files in other folders)
